kubernetes/apps/jupyterlab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterlab
  labels:
    toolkit.fluxcd.io/tenant: dev-team
