kubernetes/apps/jupyterlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  namespace: jupyterlab
  labels:
    app.kubernetes.io/name: jupyterlab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jupyterlab
