kubernetes/apps/jupyterlab/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-tailscale
  namespace: jupyterlab
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: jupyterlab
      port:
        number: 8888
  tls:
    - hosts:
        - jupyter
